Add image to Callout - Languages - Refactor

--- a/MadridShops/Info.plist
+++ b/MadridShops/Info.plist
@@ -21,7 +21,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Quiero espiarte a tope</string>
+	<string>The experience of use will be more rewarding</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
